DevOCL/src/objects/CLQ_Program__c.object
<CustomObject>
    <fields>
        <fullName>Rating_Expiration_Date__c</fullName>
        <label>Rating Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>create_new_prog_alleged_op__c</fullName>
        <formula>HYPERLINK(&quot;https://oclqs--poc.cs33.my.salesforce.com/setup/ui/recordtypeselect.jsp?ent=01I350000000Dvd&amp;retURL=%2Fa05%2Fo&amp;save_new_url=%2Fa05%2Fe%3FretURL%3D%252Fa05%252Fo&quot;, &quot;Create a New Program/Alleged Op&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create New Program/Alleged op</label>
        <type>Text</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Assigned_Reviewer__c</columns>
        <columns>CLQ_Program_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Programs</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Program_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CLQ_Assigned_Reviewer__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Programs</label>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Programs_Child_Care</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Assigned_Reviewer__c</columns>
        <columns>CLQ_Program_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program__c.CLQ_Child_Care_Center</value>
        </filters>
        <label>My Programs Child Care</label>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Programs_Day_Camp</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Assigned_Reviewer__c</columns>
        <columns>CLQ_Program_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program__c.CLQ_Day_Camp</value>
        </filters>
        <label>My Programs Day Camp</label>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Programs_In_Home_Aid</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Assigned_Reviewer__c</columns>
        <columns>CLQ_Program_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program__c.CLQ_In_Home_Aide</value>
        </filters>
        <label>My Programs In-Home Aide</label>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Programs_Out_of_State</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Assigned_Reviewer__c</columns>
        <columns>CLQ_Program_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program__c.CLQ_Out_of_State_Registration</value>
        </filters>
        <label>My Programs Out of State</label>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Programs_Pre_School</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Assigned_Reviewer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CLQ_Program_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program__c.CLQ_Pre_School</value>
        </filters>
        <label>My Programs Pre School</label>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Programs_School_Age</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Assigned_Reviewer__c</columns>
        <columns>CLQ_Program_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program__c.CLQ_School_Age_Child_Care</value>
        </filters>
        <label>My Programs School Age</label>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Programs_Type_A_Home</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Assigned_Reviewer__c</columns>
        <columns>CLQ_Program_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program__c.CLQ_Type_A_Home</value>
        </filters>
        <label>My Programs Type-A Home</label>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Programs_Type_B_Home</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Assigned_Reviewer__c</columns>
        <columns>CLQ_Program_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program__c.CLQ_FCC_Type_B_Home</value>
        </filters>
        <label>My Programs Type-B Home</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <recordTypes>
        <fullName>CLQ_Child_Care_Center</fullName>
        <active>true</active>
        <description>ODJFS - Child Care Centers</description>
        <label>Child Care Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Day_Camp</fullName>
        <active>true</active>
        <description>Non Licensed - Day Camp</description>
        <label>Day Camp</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_FCC_Type_B_Home</fullName>
        <active>true</active>
        <description>ODJFS - Type B Homes: 1 to 6</description>
        <label>FCC - Type B Home</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_In_Home_Aide</fullName>
        <active>true</active>
        <description>Non Licensed - In Home Aide</description>
        <label>In-Home Aide</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Out_of_State_Registration</fullName>
        <active>true</active>
        <description>Non Licensed - Out of State Registration</description>
        <label>Out of State Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Pre_School</fullName>
        <active>true</active>
        <description>ODE - PS (Pre-School)</description>
        <label>Pre School</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_School_Age_Child_Care</fullName>
        <active>true</active>
        <description>ODE- SACC (School Age Child Care)</description>
        <label>School Age Child Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Type_A_Home</fullName>
        <active>true</active>
        <description>ODJFS - Type A Homes: 7 to 12</description>
        <label>FCC - Type A Home</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Capacity_cannot_exceed_Approved_Capacity</fullName>
        <active>false</active>
        <description>Current capacity cannot exceed Approved capacity</description>
        <errorConditionFormula>AND(NOT(ISNULL(CLQ_Total_Enrollment__c)),
 CLQ_Total_Enrollment__c &gt;  CLQ_Approved_Total_Capacity__c )</errorConditionFormula>
        <errorDisplayField>CLQ_Total_Enrollment__c</errorDisplayField>
        <errorMessage>Current capacity cannot exceed Approved capacity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Day_Camp_Name_is_Required_if_Accredited</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CLQ_ACA_Accredited__c = true,
 ISBLANK(CLQ_Day_Camp_Name__c))</errorConditionFormula>
        <errorDisplayField>CLQ_Day_Camp_Name__c</errorDisplayField>
        <errorMessage>Day Camp Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Desc_Other_Toxic_Subs_is_Required</fullName>
        <active>true</active>
        <description>Describe Other Toxic subsances is Required if Other Toxic Substances is Yes</description>
        <errorConditionFormula>AND(ISPICKVAL( CLQ_Other_Toxic_Substances__c ,&quot;Yes&quot;),
ISBLANK( CLQ_Describe_Other_Toxic_Substances__c ))</errorConditionFormula>
        <errorDisplayField>CLQ_Describe_Other_Toxic_Substances__c</errorDisplayField>
        <errorMessage>Please describe other toxic substances</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Foster_Children_is_Required</fullName>
        <active>true</active>
        <description>Foster Children is Required if Foster Parent is Yes</description>
        <errorConditionFormula>AND(ISPICKVAL( CLQ_Are_you_Foster_Parent__c  ,&quot;Yes&quot;),
ISBLANK(TEXT(CLQ_Foster_Children__c)))</errorConditionFormula>
        <errorDisplayField>CLQ_Foster_Children__c</errorDisplayField>
        <errorMessage>Please select Foster Children</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Level_of_Radon_Gas_is_Required</fullName>
        <active>true</active>
        <description>Level of Radon Gas is Required if Radon Gas is Yes</description>
        <errorConditionFormula>AND(ISPICKVAL(CLQ_Radon_Gas__c,&quot;Yes&quot;),
ISBLANK(CLQ_Level_of_Radon_Gas__c))</errorConditionFormula>
        <errorDisplayField>CLQ_Level_of_Radon_Gas__c</errorDisplayField>
        <errorMessage>Please enter Level of Radon gas</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>License_Issue_Date_is_Required</fullName>
        <active>true</active>
        <description>Issue Date is required on Licensed Programs</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(CLQ_License_Registration_Status__c,&quot;Licensed&quot;)
,ISPICKVAL(CLQ_License_Registration_Status__c,&quot;Licensed/Certified&quot;)),
ISNULL( CLQ_License_Issue_Date__c ))</errorConditionFormula>
        <errorDisplayField>CLQ_License_Issue_Date__c</errorDisplayField>
        <errorMessage>Please enter License Issue Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Materials_stored_in_Tanks_is_Required</fullName>
        <active>true</active>
        <description>Materials stored in Tanks is Required if Storage of Hazardous/Toxic is true</description>
        <errorConditionFormula>AND(ISPICKVAL( CLQ_Storage_of_Hazardous_Toxic_Material__c ,&quot;Yes&quot;),
ISBLANK( CLQ_Materials_stored_in_Tanks__c ))</errorConditionFormula>
        <errorDisplayField>CLQ_Materials_stored_in_Tanks__c</errorDisplayField>
        <errorMessage>Please enter Materials stored in Tanks</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Inspection_Due_is_Required</fullName>
        <active>false</active>
        <description>Next Inspection Due is required on Licensed Programs</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(CLQ_License_Registration_Status__c,&quot;Licensed&quot;)),
ISNULL( CLQ_First_Inspection_Due__c  ))</errorConditionFormula>
        <errorDisplayField>CLQ_First_Inspection_Due__c</errorDisplayField>
        <errorMessage>Next Inspection Due is required for Licensed Programs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proposed_Open_Date_has_to_be_Future_Date</fullName>
        <active>false</active>
        <errorConditionFormula>CLQ_Open_Date__c &lt;= Today()</errorConditionFormula>
        <errorDisplayField>CLQ_Open_Date__c</errorDisplayField>
        <errorMessage>Open Date must be a Date in Future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rating_Effective_And_Expiry_Date</fullName>
        <active>false</active>
        <errorConditionFormula>IF(  Not(Rating_Effective_Date__c  &lt;=  TODAY() &amp;&amp; Rating_Expiration_Date__c  &gt;=  TODAY()), ISBLANK(CLQ_Program_Rating__c) ,False)</errorConditionFormula>
        <errorDisplayField>CLQ_Program_Rating__c</errorDisplayField>
        <errorMessage>Rating should be in a valid period.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rating_Review_Update</fullName>
        <active>false</active>
        <errorConditionFormula>PRIORVALUE( CLQ_Program_Rating__c ) &lt; CLQ_Program_Rating__c</errorConditionFormula>
        <errorDisplayField>Program_Rating__c</errorDisplayField>
        <errorMessage>You should lower the value but not increase.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specialized_Foster_Home_is_Required</fullName>
        <active>true</active>
        <description>Specialized Foster Home is Required if Foster Parent is Yes</description>
        <errorConditionFormula>AND(ISPICKVAL( CLQ_Are_you_Foster_Parent__c  ,&quot;Yes&quot;),
ISBLANK(TEXT( CLQ_Specialized_Foster_Home__c )))</errorConditionFormula>
        <errorDisplayField>CLQ_Specialized_Foster_Home__c</errorDisplayField>
        <errorMessage>Please select Specialized Foster Home</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Under2Cap_not_exceed_Approved_Under2Cap</fullName>
        <active>false</active>
        <description>Current Under 2 capacity cannot exceed Approved under 2 capacity</description>
        <errorConditionFormula>AND(NOT(ISNULL( CLQ_Total_Enrollment_Under_2_years__c )),
 CLQ_Total_Enrollment_Under_2_years__c &gt;  CLQ_Approved_Capacity_Under_2__c )</errorConditionFormula>
        <errorDisplayField>CLQ_Total_Enrollment_Under_2_years__c</errorDisplayField>
        <errorMessage>Current under 2 capacity cannot exceed approved under 2 capacity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Under2_5_not_exceed_Approved_Under2_5</fullName>
        <active>false</active>
        <description>Current Under 2.5 capacity cannot exceed Approved under 2.5 capacity</description>
        <errorConditionFormula>AND(NOT(ISNULL( CLQ_Total_Enrollment_Under_2_5_years__c  )),
 CLQ_Total_Enrollment_Under_2_5_years__c &gt;  CLQ_Approved_Capacity_Under_2_5__c )</errorConditionFormula>
        <errorDisplayField>CLQ_Total_Enrollment_Under_2_5_years__c</errorDisplayField>
        <errorMessage>Current under 2.5 capacity cannot exceed approved under 2.5 capacity</errorMessage>
    </validationRules>
</CustomObject>